[package]
name = "nitro"
version = "0.4.4"
authors = ["Jacob Kiesel <kieseljake@gmail.com>"]
description = "A game engine built in Rust"
license = "MIT/Apache-2.0"
repository = "https://github.com/Xaeroxe/nitro-game-engine"
build = "build.rs"

[dependencies.sdl2]
version = "0.29.0"
features = ["image", "mixer"]

[dependencies]
unborrow = "0.3.0"
enum_primitive = "0.1.0"
num = "0.1.0"
rand = "0.3.0"
nphysics2d = "0.5.0"
nalgebra = "0.9.0"
ncollide = "0.10.0"
serde = "0.8.0"
serde_derive = "0.8.0"
bincode = "0.6.1"
chrono = "0.3.0"
