[package]
name = "nitro"
version = "0.1.0"
authors = ["Jacob Kiesel <kieseljake@gmail.com>"]

[dependencies]
piston = "0.27.0"
piston2d-graphics = "0.19.0"
piston_window = "0.58.0"
gfx_device_gl = "0.11.0"
glutin = "0.7.0"
unborrow = "0.3.0"
liquidfun = "0.8.0"
serde = "0.8.0"
serde-hjson = "0.8.0"
